@@ -1,5 +1,5 @@
 cwxn - Cumulus wxnow
-Copyright 2014 Matthew Wall
+Copyright 2014-2020 Matthew Wall
 Distributed under terms of the GPLv3
 
 cwxn is a weewx extension that emits a wxnow.txt file in the format
