@@ -1,5 +1,6 @@
 0.5 14feb2021
-* move to github
+* changes for weewx4/python3 (thank you gary!)
+* move to github (oops!)
 * make licensing explicit
 
 0.4 01jan2015
